rehearsal/stages/H6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hitokoto
  labels:
    app: hitokoto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hitokoto
  template:
    metadata:
      labels:
        app: hitokoto
    spec:
      containers:
        - name: app
          image: ghcr.io/container-nyumon/hitokoto:1.1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: hitokoto-config
            items:
              - key: notice.txt
                path: notice.txt
